Enable more ErrorProne checks.
Bug:
Change-Id: I1c16b0485a1549d251d9d900b7afca98a57fea15